--- a/.env
+++ b/.env
@@ -13,6 +13,10 @@ REDIS_ADMIN_PUBLISHED_PORT=5051
 #Substitution values for REDIS
 REDIS_PUBLISHED_PORT=6379
 
-#Substitution values for REDIS
+#Substitution values for Rabbit
 RABBIT_PUBLISHED_PORT=5672
 RABBIT_MANAGEMENT_PUBLISHED_PORT=5052
+
+#Substitution values for Mongo
+MONGO_PUBLISHED_PORT=27017
+MONGO_EXPRESS_PUBLISHED_PORT=5053
