updated comments in the .env file

--- a/.env
+++ b/.env
@@ -19,4 +19,6 @@ RABBIT_MANAGEMENT_PUBLISHED_PORT=5052
 
 #Substitution values for Mongo
 MONGO_PUBLISHED_PORT=27017
+
+#Substitution values for Mongo express
 MONGO_EXPRESS_PUBLISHED_PORT=5053
