Added loadbalancing via haproxy setup

--- a/.env
+++ b/.env
@@ -22,3 +22,6 @@ MONGO_PUBLISHED_PORT=27017
 
 #Substitution values for Mongo express
 MONGO_EXPRESS_PUBLISHED_PORT=5053
+
+#Substitution value for haproxy loadbalancer
+HAPROXY_PUBLISHED_PORT=80
