--- a/.env
+++ b/.env
@@ -25,3 +25,6 @@ MONGO_EXPRESS_PUBLISHED_PORT=5053
 
 #Substitution value for haproxy loadbalancer
 HAPROXY_PUBLISHED_PORT=80
+
+#Substitution value for webtop server
+LINUX_WEBTOP_PUBLISHED_PORT=9999
